Examples/test-suite/errors/c_redefine_typedef.i
%module xxx


struct Hello;
struct Hello;

struct MyStruct {
  int x;
};
struct MyStruct {
  int x;
};

typedef int Int;
typedef int Int;
